# Chat2RAG

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  RAG链路.excalidraw  README.md  README_zh.md  TODO.md  VERSION.txt  dockerfile  makefile  pyproject.toml  requirements-dev.txt  requirements-prod.txt  requirements.txt
backend/: main.py
backend/api/: routes.py
backend/api/v1/: __init__.py  chat.py  document.py  model.py  prompt.py  tools.py
backend/schema/: __init__.py  base.py  tools.py
chat2rag/: app.py  config.py  enums.py  exceptions.py  logger.py
chat2rag/api/: app.py  health.py  routes.py
chat2rag/api/schema/: __init__.py  base.py  chat.py  prompt.py  tools.py
chat2rag/api/static/: index.html
chat2rag/api/v1/: __init__.py  action.py  auth.py  chat.py  command.py  document.py  expression.py  flow.py  health.py  metrics.py  model.py  permission.py  prompt.py  role.py  sensitive.py  tenant.py  tools.py  uploads.py  user.py  version.py  voice.py  websocket.py
chat2rag/api/v2/: __init__.py  chat.py
chat2rag/components/: __init__.py  function.py  multimodal_prompt_builder.py  ranker.py
chat2rag/config/: __init__.py  config.py  database.py  model.py  prompts.py  rag.py
chat2rag/config/prompt/: rag_default_prompt.txt
chat2rag/core/: crud.py  deps.py  enums.py  exceptions.py  executor.py  init_app.py  logger.py  security.py  telemetry.py
chat2rag/core/asr/: base.py  fun.py
chat2rag/core/database/: __init__.py  database.py  enums.py  models.py
chat2rag/core/document/: qdrant.py
chat2rag/core/flow/: flow.py
chat2rag/core/pipelines/: agent.py  base.py  doc_pipeline.py  document.py  funciton.py  rag_pipeline.py
chat2rag/core/process/: process.py
chat2rag/core/strategies/: __init__.py  agent.py  base.py  command.py  exact_match.py  flow.py  multimodal.py  rag.py
chat2rag/core/tools/: __init__.py  mcp.py  ticket.py
chat2rag/core/tts/: kokorotts.py
chat2rag/core/vad/: base.py  silero.py
chat2rag/database/: README.md  connection.py  init_db.py
chat2rag/dataclass/: document.py  flow_node.py  strategy.py  stream.py
chat2rag/enums/: Document.py  __init__.py  process.py  status.py  tool.py
chat2rag/mcp/: config.py  create_test_data.py  init_data.py  logger.py  restaurant_server.py  server.py  utils.py
chat2rag/middleware/: __init__.py  exception.py  logging.py  tenant.py
chat2rag/models/: __init__.py  action.py  base.py  category.py  command.py  expression.py  file.py  flow.py  metric.py  models.py  permission.py  prompt.py  role.py  sensitive.py  tenant.py  tools.py  user.py
chat2rag/parses/: document_parser.py
chat2rag/pipelines/: agent.py  base.py  document.py  funciton.py  rag.py  rag_pipeline.py
chat2rag/responses/: __init__.py  base.py  error.py  success.py
chat2rag/schemas/: action.py  auth.py  base.py  chat.py  command.py  common.py  document.py  expression.py  flow_data.py  health.py  metric.py  model.py  permission.py  prompt.py  role.py  sensitive.py  tenant.py  tools.py  user.py  voice.py
chat2rag/services/: action_service.py  audio_service.py  auth_service.py  chat_service.py  collection_service.py  command_service.py  contextual_retrieval.py  excel_schema_service.py  expression_service.py  file_service.py  flow_service.py  metric_service.py  metrics_collector.py  model_service.py  prompt_service.py  question_analyzer.py  rbac_service.py  sensitive_service.py  tool_service.py
chat2rag/stores/: qdrant.py
chat2rag/strategies/: __init__.py  agent.py  base.py  command.py  exact_match.py  multimodal.py  rag.py  sensitive.py
chat2rag/streaming/: __init__.py  behavior_parser.py  constants.py  handler.py  mode_processor.py  tool_handler.py  tts_processor.py
chat2rag/tools/: __init__.py  bazi.py  htw_mcp.py  mcp.py  migrate_to_file_system.py  ticket.py  tool_manage.py  tool_manager.py  tools.yaml  translit.py  weather.py  web_search.py  weibo.py
chat2rag/ui/: app.py  config.py  enums.py
chat2rag/utils/: camelize.py  chat_cache.py  chat_history.py  decorators.py  flow_json_parse.py  intent_recognizer.py  llm_client.py  merge_kwargs.py  monitoring.py  param_extractor.py  pipeline_cache.py  preview_cache.py  qdrant_store.py  short_name.py  stream.py  stream_v1.py
docker/: backend.Dockerfile  docker-compose-embedding.yml  docker-compose.yml  dockerfile  frontend.Dockerfile
docs/: websocket.md  人机交互系统名称待选.md  待解决问题.md  机场值机流程示例.md  模型集成思路.md
docs/mcp/: 点餐流程.md
evaluation/rag/: __init__.py  evaluator.py  metrics.py  run_eval.py
example/: agent_mcp.py  funciton_pipeline.py  intent_mcp.ipynb  rag_pipeline.py  speach_to_text.ipynb
frontend/: app.py  config.py  pyproject.toml  requirements.txt
frontend/controller/: knowledge_controller.py  model_controller.py  prompt_controller.py
frontend/utils/: initialize.py  sidebar.py  version.py
frontend/views/: chat.py  knowledge.py  prompt.py  version.py
rag_core/: logging.py
rag_core/components/: __init__.py  function.py  voice.py
rag_core/config/: __init__.py  embedding_check.py  setting.py
rag_core/database/: __init__.py  database.py  models.py  timescale.py
rag_core/dataclass/: document.py
rag_core/document/: qdrant.py
rag_core/pipelines/: doc_pipeline.py  func_pipeline.py  rag_pipeline.py
rag_core/telemetry/: telemetry.py
rag_core/tools/: __init__.py  bazi.py  today.py  tool_manage.py  tools.yaml  translit.py  weather.py  weibo.py
rag_core/utils/: chat_cache.py  logger.py  metric.py  stream.py
scripts/: start-xinference.sh  start.sh
tests/: conftest.py  test_pipeline.py  test_tool_manager.py  测试数据.csv
tests/test_api/: test_action.py  test_chat.py  test_command.py  test_document.py  test_expression.py  test_flow.py  test_health.py  test_main.py  test_model.py  test_prompt.py  test_sensitive.py  test_tool.py
tests/test_rag/: test_timescale.py
tests/test_service/: test_metric_service.py
tests/test_tts/: test_ali_tts.py
ui/: app.py
web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
web/src/: main.ts
web/src/api/: auth.ts  (+17 more)
(+94 files in other folders)
